<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainEar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnStart">Start Recording</string>
    <string name="btnStop">Stop Recording</string>
    <string name="txtPitch">Pitch Freq</string>
    <string name="btnPlay">Play Recording</string>
    <string name="btnPStop">Stop Playing</string>
    <string name="btnSelect">Select File</string>
    <string name="btnPlayWav">Play Wave File</string>
    <string name="btnStopWav">Stop Wave File</string>
    <string name="title_activity_file_chooser">FileChooser</string>
    <string name="hello">Hello World, FileChooser!</string>
    <string name="folder">Folder</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="fileSize">File Size</string>
    <string name="currentDir">Current Dir</string>
    <string name="selectedPlay">Selected Play</string>
    <string name="btnSelQ">Select</string>
    <string name="btnPlayQ">Play Q</string>
    <string name="btnRecA">Rec A</string>
    <string name="btnAnalyze">Analyze</string>
    <string name="btnNext">Next</string>
    <string name="btnPlayA">Play A</string>
    <string name="btnPrev">Prev</string>

    <string-array name="quesList">
        <item>1 Note</item>
        <item>2 Note</item>
        <item>3 Note</item>
        <item>4 Note</item>
        <item>Rhythm</item>
    </string-array>
    <string-array name="quesListM">
        <item>Intervals</item>
        <item>Tri-chord</item>
        <item>Tetra-chord</item>
        <item>Penta-chord</item>
    </string-array>

    <string name="difference_in_cent">Difference in Cent</string>
    <string name="header">Choose question type and press Select</string>
    <string name="analysis">Analysis result in Hertz</string>
    <string name="res1">Result 1</string>
    <string name="res2">Result 2</string>
    <string name="res3">Result 3</string>
    <string name="res4">Result 4</string>
    <string name="answer">Answer</string>
    <string name="ans1">Answer 1</string>
    <string name="ans2">Answer 2</string>
    <string name="ans3">Answer 3</string>
    <string name="ans4">Answer 4</string>
    <string name="dif_1">Dif 1</string>
    <string name="dif_2">Dif 2</string>
    <string name="dif_3">Dif 3</string>
    <string name="dif_4">Dif 4</string>
    <string name="question">Question</string>
    <string name="title_activity_main">TrainEar</string>
    <string name="title_activity_micro_ear">MicroEar</string>
    <string name="title_activity_tet">EqualEar</string>
    <string name="title_activity_song_ear">SongEar</string>

</resources>
